[tool.poetry]
name = "write-pdb"
version = "0.1.0"
description = "Modify pdb files"
authors = ["Lucas Tepper <lucas.tepper.91@gmail.com>"]
readme = "README.md"
packages = [{include = "write_pdb"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
write_pdb = "write_pdb.main:main"